2009-09-09  Claudio Saavedra  <csaavedra@igalia.com>

	Set the window menu flag for application-common menus

	* hildon/hildon-program.c:
	(+hildon_program_window_set_common_menu_flag): Set or remove the
	menu flag from a window only this doesn't have its own menu.
	(+hildon_program_set_common_menu_flag): adjust menu flag for
	all windows in the program.
	(hildon_program_add_window),
	(hildon_program_remove_window): add/remove the menu flag when
	a window is added to the program.

	Fixes: NB#137814 (Indicator for view menu in app title area)

2009-09-08  Claudio Saavedra  <csaavedra@igalia.com>

	Set a special window property for windows with menus

	* hildon/hildon-window-private.h: Add private
	hildon_window_set_menu_flag()
	* hildon/hildon-window.c: (+do_set_has_menu),
	(+hildon_window_set_menu_flag): set
	"_HILDON_WM_WINDOW_MENU_INDICATOR" to 1 in the window
	or remove the property.
	(hildon_window_set_main_menu),
	(hildon_window_set_app_menu): call above methods to set or remove
	the property when a menu is added or removed from the window.

	Partially fixes: NB#137814 (Indicator for view menu in app title area)

2009-09-08  Claudio Saavedra  <csaavedra@igalia.com>

	Rename and move the methods to set flags to hildon-private.h

	* hildon/hildon-gtk.c: (do_set_progress_indicator),
	(do_set_do_not_disturb), (do_set_portrait_flags): call
	the new private method hildon_gtk_window_set_clear_window_flag()
	(hildon_gtk_window_set_progress_indicator),
	(hildon_gtk_window_set_do_not_disturb),
	(hildon_gtk_window_take_screenshot): hildon_gtk_window_set_flag()
	* hildon/hildon-private.c: (+hildon_gtk_window_set_clear_window_flag),
	(+hildon_gtk_window_set_flag): Move from hildon-gtk.c and rename
	properly.
	* hildon/hildon-private.h: Add the two new private methds.

2009-09-11  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_init),
	(hildon_pannable_area_size_allocate),